--- a/week2-linear-classifier-learning-assignment.ipynb
+++ b/week2-linear-classifier-learning-assignment.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -747,13 +747,14 @@
     "\n",
     "        # Predict P(y_i = +1|x_i,w) using your predict_probability() function\n",
     "        # YOUR CODE HERE\n",
-    "        predictions = predict_probability(feature_matrix,initial_coefficients)\n",
+    "        predictions = predict_probability(feature_matrix,coefficients)\n",
     "        \n",
     "        # Compute indicator value for (y_i = +1)\n",
     "        indicator = (sentiment==+1)\n",
     "        \n",
     "        # Compute the errors as indicator - predictions\n",
     "        errors = indicator - predictions\n",
+    "        weights = coefficients\n",
     "        for j in xrange(len(coefficients)): # loop over each coefficient\n",
     "            \n",
     "            # Recall that feature_matrix[:,j] is the feature column associated with coefficients[j].\n",
@@ -763,8 +764,8 @@
     "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
     "            ## YOUR CODE HERE\n",
-    "            coefficients[j] += derivative\n",
-    "        \n",
+    "            weights[j] = coefficients[j] + step_size*derivative\n",
+    "        coefficients = weights\n",
     "        # Checking whether log likelihood is increasing\n",
     "        if itr <= 15 or (itr <= 100 and itr % 10 == 0) or (itr <= 1000 and itr % 100 == 0) \\\n",
     "        or (itr <= 10000 and itr % 1000 == 0) or itr % 10000 == 0:\n",
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -792,33 +793,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration   0: log likelihood of observed labels = -29516584.61245076\n",
-      "iteration   1: log likelihood of observed labels = -59033143.53740825\n",
-      "iteration   2: log likelihood of observed labels = -88549708.06777117\n",
-      "iteration   3: log likelihood of observed labels = -118066274.01902013\n",
-      "iteration   4: log likelihood of observed labels = -147582840.50328556\n",
-      "iteration   5: log likelihood of observed labels = -177099407.22786576\n",
-      "iteration   6: log likelihood of observed labels = -206615974.07327428\n",
-      "iteration   7: log likelihood of observed labels = -236132540.98382598\n",
-      "iteration   8: log likelihood of observed labels = -265649107.93110326\n",
-      "iteration   9: log likelihood of observed labels = -295165674.89967573\n",
-      "iteration  10: log likelihood of observed labels = -324682241.88081366\n",
-      "iteration  11: log likelihood of observed labels = -354198808.86944616\n",
-      "iteration  12: log likelihood of observed labels = -383715375.86257809\n",
-      "iteration  13: log likelihood of observed labels = -413231942.85842222\n",
-      "iteration  14: log likelihood of observed labels = -442748509.85590512\n",
-      "iteration  15: log likelihood of observed labels = -472265076.85437971\n",
-      "iteration  20: log likelihood of observed labels = -619847911.85222304\n",
-      "iteration  30: log likelihood of observed labels = -915013581.85203171\n",
-      "iteration  40: log likelihood of observed labels = -1210179251.85203028\n",
-      "iteration  50: log likelihood of observed labels = -1505344921.85203028\n",
-      "iteration  60: log likelihood of observed labels = -1800510591.85203028\n",
-      "iteration  70: log likelihood of observed labels = -2095676261.85203028\n",
-      "iteration  80: log likelihood of observed labels = -2390841931.85203028\n",
-      "iteration  90: log likelihood of observed labels = -2686007601.85203028\n",
-      "iteration 100: log likelihood of observed labels = -2981173271.85203028\n",
-      "iteration 200: log likelihood of observed labels = -5932829971.85202980\n",
-      "iteration 300: log likelihood of observed labels = -8884486671.85202980\n"
+      "iteration   0: log likelihood of observed labels = -36780.91768478\n",
+      "iteration   1: log likelihood of observed labels = -36775.13434712\n",
+      "iteration   2: log likelihood of observed labels = -36769.35713564\n",
+      "iteration   3: log likelihood of observed labels = -36763.58603240\n",
+      "iteration   4: log likelihood of observed labels = -36757.82101962\n",
+      "iteration   5: log likelihood of observed labels = -36752.06207964\n",
+      "iteration   6: log likelihood of observed labels = -36746.30919497\n",
+      "iteration   7: log likelihood of observed labels = -36740.56234821\n",
+      "iteration   8: log likelihood of observed labels = -36734.82152213\n",
+      "iteration   9: log likelihood of observed labels = -36729.08669961\n",
+      "iteration  10: log likelihood of observed labels = -36723.35786366\n",
+      "iteration  11: log likelihood of observed labels = -36717.63499744\n",
+      "iteration  12: log likelihood of observed labels = -36711.91808422\n",
+      "iteration  13: log likelihood of observed labels = -36706.20710739\n",
+      "iteration  14: log likelihood of observed labels = -36700.50205049\n",
+      "iteration  15: log likelihood of observed labels = -36694.80289716\n",
+      "iteration  20: log likelihood of observed labels = -36666.39512033\n",
+      "iteration  30: log likelihood of observed labels = -36610.01327118\n",
+      "iteration  40: log likelihood of observed labels = -36554.19728365\n",
+      "iteration  50: log likelihood of observed labels = -36498.93316099\n",
+      "iteration  60: log likelihood of observed labels = -36444.20783914\n",
+      "iteration  70: log likelihood of observed labels = -36390.00909449\n",
+      "iteration  80: log likelihood of observed labels = -36336.32546144\n",
+      "iteration  90: log likelihood of observed labels = -36283.14615871\n",
+      "iteration 100: log likelihood of observed labels = -36230.46102347\n",
+      "iteration 200: log likelihood of observed labels = -35728.89418769\n",
+      "iteration 300: log likelihood of observed labels = -35268.51212683\n"
      ]
     }
    ],
@@ -865,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -892,10 +893,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, -1,  1, ..., -1, -1, -1])"
+       "array([ 1, -1,  1, ..., -1,  1, -1])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -923,10 +924,10 @@
     {
      "data": {
       "text/plain": [
-       "21345"
+       "25126"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -962,8 +963,8 @@
      "output_type": "stream",
      "text": [
       "-----------------------------------------------------\n",
-      "# Reviews   correctly classified = 39326\n",
-      "# Reviews incorrectly classified = 13746\n",
+      "# Reviews   correctly classified = 39325\n",
+      "# Reviews incorrectly classified = 13747\n",
       "# Reviews total                  = 53072\n",
       "-----------------------------------------------------\n",
       "Accuracy = 0.74\n"
@@ -1006,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1036,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -1044,19 +1045,19 @@
     {
      "data": {
       "text/plain": [
-       "[('great', 692751.5),\n",
-       " ('love', 690042.5),\n",
-       " ('easy', 674842.0),\n",
-       " ('little', 467904.5),\n",
-       " ('loves', 464142.0),\n",
-       " ('well', 303558.5),\n",
-       " ('perfect', 303558.5),\n",
-       " ('old', 202723.5),\n",
-       " ('nice', 184814.0),\n",
-       " ('soft', 179546.5)]"
+       "[('great', 0.069275149999999647),\n",
+       " ('love', 0.069004250000000072),\n",
+       " ('easy', 0.06748420000000005),\n",
+       " ('little', 0.046790450000000261),\n",
+       " ('loves', 0.046414200000000044),\n",
+       " ('well', 0.030355849999999917),\n",
+       " ('perfect', 0.030355849999999917),\n",
+       " ('old', 0.020272350000000126),\n",
+       " ('nice', 0.018481399999999922),\n",
+       " ('soft', 0.017954649999999985)]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -1091,19 +1092,19 @@
     {
      "data": {
       "text/plain": [
-       "[('return', -279779.5),\n",
-       " ('monitor', -283241.0),\n",
-       " ('disappointed', -300548.5),\n",
-       " ('back', -315899.5),\n",
-       " ('even', -334712.0),\n",
-       " ('get', -339678.5),\n",
-       " ('work', -361952.5),\n",
-       " ('money', -414176.0),\n",
-       " ('product', -474526.5),\n",
-       " ('would', -638120.0)]"
+       "[('return', -0.027977950000000137),\n",
+       " ('monitor', -0.028324099999999935),\n",
+       " ('disappointed', -0.030054849999999821),\n",
+       " ('back', -0.031589949999999895),\n",
+       " ('even', -0.03347119999999984),\n",
+       " ('get', -0.03396785000000007),\n",
+       " ('work', -0.036195249999999971),\n",
+       " ('money', -0.04141760000000029),\n",
+       " ('product', -0.047452650000000124),\n",
+       " ('would', -0.063811999999999619)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
